# micro_sp

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  blocksworld.md  blocksworld_bool_explicit.csv  blocksworld_bool_explicit.md  blocksworld_bool_explicit_default.csv  blocksworld_bool_explicit_instance_1.txt  blocksworld_bool_explicit_instance_12.txt  blocksworld_bool_explicit_instance_3.txt  blocksworld_bool_explicit_instance_5.txt  blocksworld_bool_explicit_instance_7.txt  blocksworld_bool_invariant.csv  blocksworld_bool_invariant.md  blocksworld_bool_invariant_default.csv  blocksworld_bool_invariants_instance_25_exponential on incremental.txt  blocksworld_enum_invariant.csv  blocksworld_enum_invariant_default.csv  blocksworld_enum_invariants_instance_1.txt  blocksworld_enum_invariants_instance_10_subgoaling_on_incremental.txt  blocksworld_enum_invariants_instance_12.txt  blocksworld_enum_invariants_instance_1_subgoaling_on_incremental.txt  blocksworld_enum_invariants_instance_28_exponential_on_incremental.txt  blocksworld_enum_invariants_instance_2_incremental.txt  blocksworld_enum_invariants_instance_5_subgoaling_on_incremental.txt  package.xml  render_cactus.csv
.VSCodeCounter/2020-10-27_20-49-48/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-10-27_20-51-32/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-10-27_20-51-57/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2025-05-29_19-44-40/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-05-29_19-45-05/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
examples/: pick_and_place.rs
micro_sp_examples/: Cargo.toml
micro_sp_examples/examples/: robot_1.rs
micro_sp_examples/src/: lib.rs  robot.rs
micro_sp_runner/: Cargo.toml
micro_sp_runner/src/: cstate.rs  elements.rs  emmiter.rs  lib.rs  main.rs  model.rs  mstate.rs  publisher.rs  receiver.rs  runner.rs  sender.rs  state.rs  test_receiver.rs
micro_sp_smt/: Cargo.toml
micro_sp_smt/tests/: config_int_tests.rs  context_int_tests.rs  logics_int_tests.rs  operations_int_tests.rs  optimizer_int_tests.rs  relations_int_tests.rs  solver_int_tests.rs  sorts_int_tests.rs  values_int_tests.rs  variables_int_tests.rs
micro_sp_tools/: Cargo.toml
micro_sp_tools/src/: basics.rs  incremental.rs  lib.rs  predicates.rs  utils.rs
proptest-regressions/tests/: transition.txt
src/: basics.rs  blocks.rs  incremental.rs  lib.rs  main.rs  model.rs  predicates.rs  publisher.rs  receiver.rs  runner.rs  sender.rs  state.rs  utils.rs
src/asdf/: initial_state.rs  mod.rs  ticker.rs  triggers.rs  ur_robot.rs
src/assist/: mod.rs  step_1.rs  step_2.rs  step_3.rs
src/core/: action.rs  async_incremental.rs  compositional.rs  exponential.rs  incremental.rs  items.rs  macros.rs  mod.rs  parameterized.rs  planning.rs  predicate.rs  predicates.rs  sequential.rs  sharded_mutex.rs  skipping.rs  sp_assignment.rs  sp_common.rs  sp_goal.rs  sp_state.rs  sp_value.rs  sp_variable.rs  sp_wrapped.rs  state.rs  structs.rs  subgoaling.rs  transition.rs  uniparallel.rs  var_or_val.rs
src/gui/: mod.rs  transforms_gui.rs
src/macros/: action.rs  mod.rs  predicate.rs  sp_assignment.rs  sp_variable.rs  state.rs  transition.rs
src/management/: connection.rs  mod.rs  snapshot.rs  state.rs  transforms.rs
src/model/: action.rs  mod.rs  operation.rs  operation_model.rs  parser.rs  predicate.rs  transition.rs
src/modelling/: action.rs  flex_operation.rs  mod.rs  model.rs  operation.rs  operation_old.rs  parser.rs  predicate.rs  resource.rs  sops.rs  transition.rs
src/models/: initial.rs  mod.rs
src/planning/: mod.rs  operation.rs  structs.rs  transition.rs
src/runner/: dummy.rs  mod.rs  node.rs  operation.rs  runner.rs  sender.rs  state.rs  ticker.rs  triggers.rs  ur_robot.rs
src/running/: auto_operation_runner.rs  auto_runner.rs  auto_transition_runner.rs  mod.rs  (+23 more)
tests/: basics.rs  incremental.rs  predicates.rs
(+831 files in other folders)
