[package]
name = "micro_sp"
version = "0.1.0"
authors = ["Endre Erős <endre.eros@chalmersindustriteknik.se>"]
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
tokio = { version = "1", features = ["full"] }
ordered-float = {version = "3.4.0", features = ["serde"] }
peg = "0.8.1"
serde = {version = "1.0.152", features = ["derive"] }