[package]
name = "micro_sp"
version = "0.1.0"
authors = ["Endre Erős <endre.eros@chalmersindustriteknik.se>"]
edition = "2021"

[dependencies]
log = "0.4.22"
nanoid = "0.4.0"
nalgebra = "0.32.5"
termtree = "0.5.1"
chrono = "0.4.38"
serial_test = "3.2.0"
env_logger = "0.11.5"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.29.1", features = ["tokio-comp"] }
ordered-float = {version = "3.4.0", features = ["serde"] }
peg = "0.8.1"
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.140"
testcontainers = "0.23.3"
testcontainers-modules = { version = "0.11.6", features = ["redis"] }