[package]
name = "micro_sp"
version = "0.1.0"
authors = ["Endre Erős <endre.eros@chalmersindustriteknik.se>"]
edition = "2024"

[dependencies]
rand = "0.9.2"
rayon = "1.10"
colored = "2.1"
console = "0.15"
nanoid = "0.4.0"
poll-promise = "0.3.0"
futures = "0.3"
nalgebra = "0.32.5"
termtree = "0.5.1"
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4", features = ["serde"] }
serial_test = "3.2.0"
env_logger = "0.11.5"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.29.1", features = ["tokio-comp"] }
ordered-float = {version = "3.4.0", features = ["serde"] }
peg = "0.8.1"
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.140"
testcontainers = "0.23.3"
testcontainers-modules = { version = "0.11.6", features = ["redis"] }
async-recursion = "1.1.1"