[package]
name = "micro_sp_examples"
version = "0.1.0"
authors = ["endre90 <endre90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micro_sp_tools = { path = "../micro_sp_tools" }
micro_sp_runner = { path = "../micro_sp_runner" }
plotlib = "0.5.1"

[dev-dependencies]
serial_test = "0.4.0"