[package]
name = "micro_sp_runner"
version = "0.1.0"
authors = ["endre90 <endre90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micro_sp_tools = { path = "../micro_sp_tools" }
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
r2r = { git = "https://github.com/sequenceplanner/r2r" }
serde_json = "1.0.57"
serde = "1.0.116"
futures = "0.3.5"
arrayvec = "0.5.1"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"